# siderophile

./: .gitignore  .gitmodules  Cargo.toml  README.md  SIDEROPHILE-LICENSE  UbuntuInstallation.md  analyze.sh  build.rs  rust-toolchain.toml  sample-badness.txt  setup.sh  target.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  lint.yml  release.yml
docs/: UbuntuInstallation.md
samples/: callgraph.dot  nodes_to_taint.txt  siderophile_output.txt  trace_badness_output.txt  unmangled_callgraph.dot  unsafe_deps.txt
script/: find_unsafe_nodes.py  trace_unsafety.py  trace_unsafety_requirements.txt
src/: ast_walker.rs  callgraph_gen.rs  deps.rs  lib.rs  main.rs  mark_source.rs  matching.rs  utils.rs
src/callgraph_matching/: mod.rs
src/demangler/: mod.rs
src/trawl_source/: .#mod.rs  ast_walker.rs  mod.rs
tests/: .gitignore  gif_expected_badness.txt  miniz_oxide_c_api_expected_badness.txt  run_tests.sh  suffix_array_expected_badness.txt
tests/crate-use-rust-toolchain/: Cargo.toml
tests/crate-uses-rust-toolchain/: Cargo.toml  callgraph.dot  expected_badness.txt
tests/crate-uses-rust-toolchain/src/: lib.rs
tests/inlining/: Cargo.toml  callgraph.dot  expected_badness.txt
tests/inlining/src/: main.rs
tests/librarycrate/: Cargo.toml  badness.txt  callgraph.dot  expected_badness.txt
tests/librarycrate/src/: lib.rs
