[package]
name = "siderophile"
version = "0.1.4"
authors = ["Michael Rosenberg <michael.rosenberg@trailofbits.com>", "Claudia Richoux <claudia.richoux@trailofbits.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Find the ideal fuzz targets in a Rust codebase"
repository = "https://github.com/trailofbits/siderophile"

[lib]
name = "siderophile_callgraph"
path = "src/lib.rs"

[[bin]]
name = "siderophile"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo = { version = "0.61.0" }
cargo-util = "0.1.1"
env_logger = "0.9"
glob = "0.3"
llvm-ir = { version = "0.8.2", features = ["llvm-14"] }
log = "0.4"
quote = "1.0.18"
regex = "1"
rustc-demangle = "0.1"
rustc_version = "0.4.0"
structopt = "0.3"
syn = { version = "1.0", features = ["full", "visit"] }
tempfile = "3.3.0"
walkdir = "2.3"
