[package]
name = "siderophile"
version = "0.2.1"
authors = [
  "Michael Rosenberg <michael.rosenberg@trailofbits.com>",
  "Claudia Richoux <claudia.richoux@trailofbits.com>",
]
edition = "2021"
license = "AGPL-3.0"
description = "Find the ideal fuzz targets in a Rust codebase"
repository = "https://github.com/trailofbits/siderophile"
categories = ["command-line-utilities", "compilers"]
keywords = ["cli", "llvm", "fuzzing", "security"]

[package.metadata.release]
dev-version = false
publish = false     # handled by GitHub Actions
push = true

[lib]
name = "siderophile_callgraph"
path = "src/lib.rs"

[[bin]]
name = "siderophile"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo = "0.66.0"
cargo-util = "0.2.4"
env_logger = "0.9"
glob = "0.3"
llvm-ir = { version = "0.9.0", features = ["llvm-15"] }
log = "0.4"
quote = "1.0.28"
regex = "1"
rustc-demangle = "0.1"
rustc_version = "0.4.0"
structopt = "0.3"
syn = { version = "1.0", features = ["full", "visit"] }
tempfile = "3.3.0"
walkdir = "2.3"
